--- a/cv.html
+++ b/cv.html
@@ -14,10 +14,10 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <title>ERIKA Hashizume</title>
+    <title>ERIKA Hashizume - CV</title>
   </head>
-  <body class="bg-beige">
-    <nav class="topnav topnav-indexcolor ?">
+  <body class="bg-black">
+    <nav class="topnav topnav-aboutcolor ?">
       <div class="topnav-name ?">
         <p>
           <b><a href="index.html">ERIKA Hashizume</a></b>
@@ -37,41 +37,11 @@
       </div>
     </nav>
 
-    <section class="section-landing" id="sec1">
-      <div class="landing-name ?">
-        <h1 class="inline">ERIKA</h1>
-        <h3 class="inline">Hashizume</h3>
+    <section class="section-about ?" id="sec2">
+      <div class="about-detailbox bg-gray ?">
+        <p>CV</p>
       </div>
-      <div class="landing-jobtitle ?">
-        <h4>Sofware / Mechanical</h4>
-        <h5>ENGINEER</h5>
-      </div>
-      <div class="landing-detail bg-black ?">
-        <div class="detail-upper">
-          <div class="detail-sentence ?">
-            <h5>Full-stack Developer</h5>
-            <ul>
-              <li>
-                - seeking a new opportunity as a software engineer position
-              </li>
-              <li>- focusing on writing clean, elegant, and efficient code</li>
-              <li>- having 4 years of the mechanical engineering experience</li>
-            </ul>
-          </div>
-          <div class="detail-photo">
-            <img
-              src="css/img_css/img-ErikaHashizume.JPG"
-              alt="img-ErikaHashizume"
-            />
-          </div>
-        </div>
-        <div class="detail-btn ?">
-          <a class="btn btn-full" href="about.html"><h5>About</h5></a>
-          <a class="btn btn-full" href="portfolio.html"><h5>Portfolio</h5></a>
-          <a class="btn btn-full" href="#"><h5>CV</h5></a>
-        </div>
-      </div>
-      <div class="sticky-social social1 ?">
+      <div class="sticky-social social2">
         <ul>
           <li>
             <a href="https://github.com/erika-goodwin"
