--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <title>ERIKA Hashizume</title>
+    <title>ERIKA Hashizume - contact</title>
   </head>
   <body class="bg-beige">
     <nav class="topnav topnav-indexcolor ?">
@@ -38,40 +38,7 @@
     </nav>
 
     <section class="section-landing" id="sec1">
-      <div class="landing-name ?">
-        <h1 class="inline">ERIKA</h1>
-        <h3 class="inline">Hashizume</h3>
-      </div>
-      <div class="landing-jobtitle ?">
-        <h4>Sofware / Mechanical</h4>
-        <h5>ENGINEER</h5>
-      </div>
-      <div class="landing-detail bg-black ?">
-        <div class="detail-upper">
-          <div class="detail-sentence ?">
-            <h5>Full-stack Developer</h5>
-            <ul>
-              <li>
-                - seeking a new opportunity as a software engineer position
-              </li>
-              <li>- focusing on writing clean, elegant, and efficient code</li>
-              <li>- having 4 years of the mechanical engineering experience</li>
-            </ul>
-          </div>
-          <div class="detail-photo">
-            <img
-              src="css/img_css/img-ErikaHashizume.JPG"
-              alt="img-ErikaHashizume"
-            />
-          </div>
-        </div>
-        <div class="detail-btn ?">
-          <a class="btn btn-full" href="about.html"><h5>About</h5></a>
-          <a class="btn btn-full" href="portfolio.html"><h5>Portfolio</h5></a>
-          <a class="btn btn-full" href="#"><h5>CV</h5></a>
-        </div>
-      </div>
-      <div class="sticky-social social1 ?">
+      <div class="sticky-social social1">
         <ul>
           <li>
             <a href="https://github.com/erika-goodwin"
