--- a/about.html
+++ b/about.html
@@ -6,42 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="…" />
 
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+
+    <!-- swup -->
+    <!-- <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>   -->
+    <!-- css,js -->
+    <script defer type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
     <!--not yet-->
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- animation -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"
+    ></script>
 
     <title>ERIKA Hashizume - about</title>
   </head>
   <body class="bg-black">
-    <nav class="topnav topnav-aboutcolor ?">
-      <div class="topnav-name ?">
-        <p><b><a href="index.html">ERIKA Hashizume</a></b></p>
+    <nav class="topnav topnav-aboutcolor bg-black ">
+      <div class="topnav-name ">
+        <p>
+          <b><a href="/index.html">ERIKA Hashizume</a></b>
+        </p>
       </div>
-      <div class="topnav-list ?">
+      <div class="topnav-list ">
         <ul>
-          <li class="?"><a href="about.html">About</a></li>
-          <li class="?"><a href="portfolio.html">Portfolio</a></li>
-          <li class="?"><a href="Contact.html">Contact</a></li>
+          <li class=""><a href="/about.html">About</a></li>
+          <li class=""><a href="/portfolio.html">Portfolio</a></li>
+          <li class=""><a href="/Contact.html">Contact</a></li>
         </ul>
       </div>
-      <div class="topnav-cv ?">
-        <p><b><a href="cv.html">CV</a></b></p>
+      <div class="topnav-cv ">
+        <p>
+          <b><a href="/cv.html">CV</a></b>
+        </p>
       </div>
     </nav>
 
 
-    <section class="section-about ?" id="sec2">
-        <div class="about-title ?">
-          <h3>About ME</h3>
+    <section class="section-about ">
+        <div class="about-title">
+          <h2>About ME</h2>
         </div>
-        <div class="about-detailbox bg-beige ?">
-            <h6 class="about-belt bg-black ?">I am a full-stack engineer based in Vancouver, Canada</h6>
+        <div class="about-detailbox bg-beige animation-delay">
+            <h6 class="about-belt bg-black ">I am a full-stack engineer based in Vancouver, Canada</h6><br>
             <h5>My background:</h5>
-            <div class="about-p ?">
+            <div class="about-p ">
               <p>Having an engineering degree in Aerospace Engineering
                 since 2017, I worked as a Mechanical Engineer ( Airline System
                 Engineer ) at a domestic airline in Japan for 4 years (Apr 2017-Mar 2021). 
@@ -50,14 +65,14 @@
             </div>
             <br/>
             <h5>Tech Skill:</h5>
-            <ul class="about-li ?">
+            <ul class="about-li ">
               <li>・HTML:       Intermediate </li>
               <li>・CSS:        Intermediate</li>
               <li>・JavaScript: Beginner</li>
             </ul>
             <br>
             <h5>Language:</h5> 
-            <ul class="about-li ?">
+            <ul class="about-li ">
               <li>・English🇺🇸</li>
               <li>・Japanese🇯🇵</li>
             </ul>
@@ -65,7 +80,7 @@
                                       
           </p>
         </div>
-        <div class="sticky-social social2">
+        <div class="sticky-social social-gray">
           <ul>
             <li>
               <a href="https://github.com/erika-goodwin"
@@ -73,7 +88,7 @@
               ></a>
             </li>
             <li>
-              <a href="http://api.whatsapp.com/send?phone=16043536897"
+              <a href="http://api.whatsapp.com/sendphone=16043536897"
                 ><ion-icon name="logo-whatsapp"></ion-icon
               ></a>
             </li>
