--- a/portfolio.html
+++ b/portfolio.html
@@ -7,45 +7,108 @@
     <meta name="description" content="…" />
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+
+    <!-- swup -->
+    <!-- <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script> -->
+    <!-- css,js -->
+    <script defer type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
     <!--not yet-->
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- animation -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"
+    ></script>
 
     <title>ERIKA Hashizume - portfolio</title>
   </head>
-  <body>
-    <nav class="topnav topnav-portfoliocolor ?">
-      <div class="topnav-name ?">
+  <body class="bg-gray">
+    <nav class="topnav topnav-portfoliocolor bg-gray">
+      <div class="topnav-name">
         <p>
-          <b><a href="index.html">ERIKA Hashizume</a></b>
+          <b><a href="/index.html">ERIKA Hashizume</a></b>
         </p>
       </div>
-      <div class="topnav-list ?">
+      <div class="topnav-list">
         <ul>
-          <li class="?"><a href="about.html">About</a></li>
-          <li class="?"><a href="portfolio.html">Portfolio</a></li>
-          <li class="?"><a href="Contact.html">Contact</a></li>
+          <li class=""><a href="/about.html">About</a></li>
+          <li class=""><a href="/portfolio.html">Portfolio</a></li>
+          <li class=""><a href="/Contact.html">Contact</a></li>
         </ul>
       </div>
-      <div class="topnav-cv ?">
+      <div class="topnav-cv">
         <p>
-          <b><a href="cv.html">CV</a></b>
+          <b><a href="/cv.html">CV</a></b>
         </p>
       </div>
     </nav>
 
     <section class="section-portfolio">
-      <div class="portfolio-title ?">
-        <h3>portfolio</h3>
+      <div class="portfolio-title">
+        <h2>Portfolio</h2>
       </div>
-      <div class="portfolio-detailbox ?">
-        <div class="box-gal"></div>
+      <div class="portfolio-detailbox">
+        <div class="box-gal">
+          <div class="box-list animation-delay">
+            <h4 class="bg-black">Guess-Number</h4>
+            <div class="bg-gray padding1">
+              <img src="css/img_css/Guess-Number.png" alt="img-guess-number" />
+              <div class="description">
+                <p>
+                  description /////description /////description /////description
+                  /////description /////description /////description /////
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="box-list animation-delay">
+            <h4 class="bg-black">Pig-Game</h4>
+            <div class="bg-gray padding1">
+              <img src="css/img_css/Pig-Game.png" alt="img-guess-number" />
+              <div class="description">
+                <p>
+                  description /////description /////description /////description
+                  /////description /////description /////description /////
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box-gal">
+          <div class="box-list animation-delay">
+            <h4 class="bg-black inline">TravelJP</h4>
+            <div class="bg-gray padding1">
+              <img src="css/img_css/TravelJP.png" alt="img-traveljp" />
+              <div class="description">
+                <p>
+                  description /////description /////description /////description
+                  /////description /////description /////description /////
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="box-list animation-delay">
+            <h4 class="bg-black">Pig-Game</h4>
+            <div class="bg-gray padding1">
+              <img src="css/img_css/Pig-Game.png" alt="img-guess-number" />
+              <div class="description">
+                <p>
+                  description /////description /////description /////description
+                  /////description /////description /////description /////
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="sticky-social social3">
+      <div class="sticky-social social-black">
         <ul>
           <li>
             <a href="https://github.com/erika-goodwin"
@@ -53,7 +116,7 @@
             ></a>
           </li>
           <li>
-            <a href="http://api.whatsapp.com/send?phone=16043536897"
+            <a href="http://api.whatsapp.com/sendphone=16043536897"
               ><ion-icon name="logo-whatsapp"></ion-icon
             ></a>
           </li>
