--- a/cv.html
+++ b/cv.html
@@ -7,41 +7,73 @@
     <meta name="description" content="…" />
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- swup -->
+    <!-- <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script> -->
+    <!-- css,js -->
+    <script defer type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
     <!--not yet-->
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- animation -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"
+    ></script>
 
     <title>ERIKA Hashizume - CV</title>
   </head>
   <body class="bg-black">
-    <nav class="topnav topnav-aboutcolor ?">
-      <div class="topnav-name ?">
+    <nav class="topnav topnav-cvcolor bg-black">
+      <div class="topnav-name">
         <p>
-          <b><a href="index.html">ERIKA Hashizume</a></b>
+          <b><a href="/index.html">ERIKA Hashizume</a></b>
         </p>
       </div>
-      <div class="topnav-list ?">
+      <div class="topnav-list">
         <ul>
-          <li class="?"><a href="about.html">About</a></li>
-          <li class="?"><a href="portfolio.html">Portfolio</a></li>
-          <li class="?"><a href="Contact.html">Contact</a></li>
+          <li class=""><a href="/about.html">About</a></li>
+          <li class=""><a href="/portfolio.html">Portfolio</a></li>
+          <li class=""><a href="/Contact.html">Contact</a></li>
         </ul>
       </div>
-      <div class="topnav-cv ?">
+      <div class="topnav-cv">
         <p>
-          <b><a href="cv.html">CV</a></b>
+          <b><a href="/cv.html">CV</a></b>
         </p>
       </div>
     </nav>
 
-    <section class="section-about ?" id="sec2">
-      <div class="about-detailbox bg-gray ?">
-        <p>CV</p>
+    <section class="section-cv">
+      <div class="cv-detailbox bg-gray animation-delay">
+        <!-- <div class="cv-title">
+          <h2>CV</h2>
+        </div> -->
+        <img
+          src="img/ErikaHashizume-Resume-General1.png"
+          alt="ErikaHashizume-Resume-General"
+          width="45%"
+        />
+        <img
+          src="img/ErikaHashizume-Resume-General2.png"
+          alt="ErikaHashizume-Resume-General"
+          width="45%"
+        />
+        <!-- <iframe
+          src="https://drive.google.com/file/d/1tpUVx9aJcf0jO9DO7X45SrAgn3LcFgBr/view?usp=sharing"
+          width="100%"
+          height="100%"
+        >
+          <p>
+            <b>表示されない時の表示</b>:
+            <a href="img/ErikaHashizume-Rsume-General.pdf">PDF をダウンロード</a
+            >.
+          </p>
+        </iframe> -->
       </div>
-      <div class="sticky-social social2">
+      <div class="sticky-social social-gray">
         <ul>
           <li>
             <a href="https://github.com/erika-goodwin"
@@ -49,7 +81,7 @@
             ></a>
           </li>
           <li>
-            <a href="http://api.whatsapp.com/send?phone=16043536897"
+            <a href="http://api.whatsapp.com/sendphone=16043536897"
               ><ion-icon name="logo-whatsapp"></ion-icon
             ></a>
           </li>
